--- a/public/500.html
+++ b/public/500.html
@@ -21,6 +21,7 @@
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
     <p>We've been notified about this issue and we'll take a look at it shortly.</p>
+	<p><a href="http://twittest.org">Return to Twittest home page </a></p>
   </div>
 </body>
 </html>
